--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Steve Hopkinson",
   "license": "ISC",
   "dependencies": {
-    "hapi": "^15.2.0"
+    "hapi": "^15.2.0",
+    "inert": "^4.0.2"
   },
   "devDependencies": {},
   "repository": {
